tests/derive_ui/non_existent_attr.stderr
error[E0599]: no method named `non_existing_attribute` found for struct `Arg` in the current scope
  --> tests/derive_ui/non_existent_attr.rs:14:18
   |
14 |     #[arg(short, non_existing_attribute = 1)]
   |                  ^^^^^^^^^^^^^^^^^^^^^^ method not found in `Arg`
